# Growlab-Raspberry-Configuration

./: .gitignore  README.md  credentials.kdbx  default.nix
api/: Makefile  go.mod  image_upload.go  image_upload_test.go
api/cmd/: main.go
configuration/: Makefile  install_ansible.sh  playbook.yaml
configuration/inventory/: inventory.yaml
configuration/scripts/: run-vlc-streaming.sh
image-capturer/: Readme.md  pyproject.toml  requirements_dev.txt
image-capturer/image-capturer/: main.py
image-capturer/image_capturer/: image.py  main.py  upload.py
image-capturer/tests/: test_image.py  test_upload.py
infrastructure/: .terraform.lock.hcl  Makefile  functions.tf  load-balancer.tf  main.tf  output.tf  service-account.tf  storage.tf  variables.tf
